--- a/views/studentsResult.ejs
+++ b/views/studentsResult.ejs
@@ -23,11 +23,15 @@
 </div>
 <div class="row">
   <div class="col-12">
-    <% var jobInfo = perfectList %>
-    <% var arrayLength = jobInfo.length %>
+    <% var jobInfo; %>
+    <% var arrayLength;%>
     <% var newJob; %>
     <% var i; %>
-    <% var widthPercent = 100;%>
+    <% var widthPercent;%>
+    <%  jobInfo = perfectList %>
+    <%  arrayLength = jobInfo.length %>
+
+    <%  widthPercent = 100;%>
 
     <h2>you have <%= arrayLength%> perfect matches</h2>
 
@@ -47,7 +51,7 @@
             <%}%>
             <div class="card text-white bg-success  mb-3" style="width: 18rem;">
               <div class="card-header ">
-                <a href="<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a>
+                <a href="acc/<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a>
                 <img src="data:image/<%=newJob.tutorImg.contentType%>;base64,
         					<%=newJob.tutorImg.data.toString('base64')%>" >
               </div>
@@ -81,7 +85,7 @@
             <%}%>
 
       <div class="card text-white bg-success  mb-3" style="width: 18rem;">
-        <div class="card-header "><a href="<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a>
+        <div class="card-header "><a href="acc/<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a>
         <img src="data:image/<%=newJob.tutorImg.contentType%>;base64,
           <%=newJob.tutorImg.data.toString('base64')%>" >
         </div>
@@ -118,7 +122,7 @@
 </div>
 <div class="row">
   <div class="col-12">
-    <h1>Same Date Matche</h1>
+
 
     <% jobInfo = sameDateList %>
     <% arrayLength = jobInfo.length %>
@@ -142,7 +146,7 @@
               <div class="card-deck" style="width: <%=widthPercent%>%">
             <%}%>
             <div class="card text-white bg-info  mb-3" style="width: 18rem;">
-              <div class="card-header "><a href="<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a>
+              <div class="card-header "><a href="acc/<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a>
               <img src="data:image/<%=newJob.tutorImg.contentType%>;base64,
                 <%=newJob.tutorImg.data.toString('base64')%>" >
                 </div>
@@ -174,7 +178,7 @@
             <%}%>
 
       <div class="card text-white bg-info  mb-3" style="width: 18rem;">
-        <div class="card-header "><a href="<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a>
+        <div class="card-header "><a href="acc/<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a>
         <img src="data:image/<%=newJob.tutorImg.contentType%>;base64,
           <%=newJob.tutorImg.data.toString('base64')%>" >
           </div>
@@ -210,7 +214,7 @@
 </div>
 <div class="row">
   <div class="col-12">
-    <h1>Same Date Matche</h1>
+
 
     <% jobInfo = sameTimeList %>
     <% arrayLength = jobInfo.length %>
@@ -234,7 +238,7 @@
               <div class="card-deck" style="width: <%=widthPercent%>%">
             <%}%>
             <div class="card text-white bg-info  mb-3" style="width: 18rem;">
-              <div class="card-header "><a href="<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a>
+              <div class="card-header "><a href="acc/<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a>
               <img src="data:image/<%=newJob.tutorImg.contentType%>;base64,
                 <%=newJob.tutorImg.data.toString('base64')%>" >
                 </div>
@@ -266,7 +270,7 @@
             <%}%>
 
       <div class="card text-white bg-info  mb-3" style="width: 18rem;">
-        <div class="card-header "><a href="<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a><img src="data:image/<%=newJob.tutorImg.contentType%>;base64,
+        <div class="card-header "><a href="acc/<%=newJob.tutorID%>" style = "position:relative; z-index :1000;">Tutor Name <%=newJob.tutorName%></a><img src="data:image/<%=newJob.tutorImg.contentType%>;base64,
           <%=newJob.tutorImg.data.toString('base64')%>" ></div>
           <div class="card-body">
             <h6 class="card-subtitle mb-2 ">Match details</h6>
