front end bug fixes of exisitng features

--- a/views/tutorHome.ejs
+++ b/views/tutorHome.ejs
@@ -162,7 +162,7 @@
             <%}%>
 
       <div class="card text-white index-card  mb-3" style="width: 18rem;">
-        <div class="card-header "><a href="<%=newJob.studentID%>" style = "position:relative; z-index :1000;">Student Name <%=newJob.studentName%></a>
+        <div class="card-header "><a href="acc/<%=newJob.studentID%>" style = "position:relative; z-index :1000;">Student Name <%=newJob.studentName%></a>
           <img src="data:image/<%=newJob.studentImg.contentType%>;base64,
             <%=newJob.studentImg.data.toString('base64')%>" ></div>
           <div class="card-body">
@@ -226,7 +226,7 @@
               <div class="card-deck" style="width: <%=widthPercent%>%">
             <%}%>
             <div class="card text-white bg-success  mb-3" style="width: 18rem;">
-              <div class="card-header "><a href="<%=newJob.studentID%>" style = "position:relative; z-index :1000;">Student Name <%=newJob.studentName%></a>
+              <div class="card-header "><a href="acc/<%=newJob.studentID%>" style = "position:relative; z-index :1000;">Student Name <%=newJob.studentName%></a>
                 <img src="data:image/<%=newJob.studentImg.contentType%>;base64,
                   <%=newJob.studentImg.data.toString('base64')%>" ></div>
               <div class="card-body">
@@ -261,7 +261,7 @@
             <%}%>
 
       <div class="card text-white bg-success  mb-3" style="width: 18rem;">
-        <div class="card-header "><a href="<%=newJob.studentID%>" style = "position:relative; z-index :1000;">Student Name <%=newJob.studentName%></a>
+        <div class="card-header "><a href="acc/<%=newJob.studentID%>" style = "position:relative; z-index :1000;">Student Name <%=newJob.studentName%></a>
           <img src="data:image/<%=newJob.studentImg.contentType%>;base64,
             <%=newJob.studentImg.data.toString('base64')%>" ></div>
           <div class="card-body">
